--- a/src/app/order-sub-system/delivery-type/delivery-type/delivery-type.component.html
+++ b/src/app/order-sub-system/delivery-type/delivery-type/delivery-type.component.html
@@ -58,16 +58,16 @@
   </div>
 
 
-  <!-- Delivery Deletion Confimation Model -->
+  <!-- Admin Deletion Confimation Model -->
 <div class="modal fade" id="deletionConfirmation" tabindex="-1" aria-labelledby="deletionConfirmationLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">Delivery Type Deletion confirmation</h5>
+        <h5 class="modal-title">Enquiry Type Deletion confirmation</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        <p>Confirm Delivery Type Deletion</p>
+        <p>Confirm Enquiry Type Deletion</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
