--- a/src/app/order-sub-system/checkout/checkout/checkout.component.html
+++ b/src/app/order-sub-system/checkout/checkout/checkout.component.html
@@ -42,7 +42,7 @@
     <div class="row mt-5">
       <div class="card">
         <div class="card-header ">
-          <h5>Order Summary</h5>
+          <h5>Order Summery</h5>
         </div>
         <div class="card-body">
           <div class="row">
@@ -61,7 +61,7 @@
                       <td scope="row">{{product.product.productName}}</td>
                       <td scope="row">{{product.product.productTypeName}}</td>
                       <td scope="row">{{product.product.productSizeDescription}}</td>
-                      <td scope="row">{{product.product.price}}</td>
+                      <td scope="row">R{{product.product.price | number:'.1-3'}}</td>
                       <td scope="row">{{product.quantity}}</td>
                     </tr>
                   </tbody>
@@ -70,12 +70,12 @@
             <div class="card-body mt-3">
               <div class="row">
                   <div class="col-lg-6">
-                      <h5>Discount:</h5>{{discount}}
+                      <h5>Discount:</h5>R{{discount | number:'.1-3'}}
                   </div>
               </div>
               <div class="row">
                 <div class="col-lg-6">
-                    <h5>Total:</h5>{{total}}
+                    <h5>Total:</h5>R{{total | number:'.1-3'}}
                 </div>
             </div>
           </div>    
@@ -86,7 +86,7 @@
     <div class=" row mt-5">
       <div class="card">
           <div class="card-header ">
-            <h5>Delivery Type</h5>
+            <h5>Delivry Type</h5>
           </div>
           <div class="card-body">
             <form [formGroup]="deliveryTypeForm">
@@ -106,7 +106,7 @@
     <div class=" row mt-5" *ngIf="showPaymentMethod">
       <div class="card">
           <div class="card-header ">
-            <h5>Payment Type</h5>
+            <h5>Payment Type Type</h5>
           </div>
           <div class="card-body">
             <form [formGroup]="paymentTypeForm">
