--- a/src/app/order-sub-system/order-product/order-product/order-product.component.html
+++ b/src/app/order-sub-system/order-product/order-product/order-product.component.html
@@ -9,9 +9,15 @@
         <div class="col-lg-4 col-md-3 col-sm-6 col-12">
             <span class="input-group" style="float: right;">
                 <input type="text" class="form-control" placeholder="Search By Product Name" aria-label="ProductName" aria-describedby="basic-addon1" [(ngModel)]="searchTerm">
-            </span>
+                <button type="button" class="btn btn-outline-primary" style="float: left;"(click)="searchByName()" >Search</button>
+              </span>
         </div>
         <div class="col-2">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-12">
+          <p>Provide your discount message here</p>
         </div>
       </div>
       <div class="row mt-5 mb-5">
@@ -33,13 +39,16 @@
             <div class="card">
                 <div class="card-body">
                   <div class="row">
-                      <div class="col-lg-3 col-md-3 col-sm-3 mt-5" *ngFor="let product of productData | filter:searchTerm">
+                      <div class="col-lg-3 col-md-3 col-sm-3 mt-5" *ngFor="let product of productData">
                         <div class="card" >
                             <img [src]="product.productImage" class="card-img-top" alt="...">
                             <div class="card-body">
                               <h5 class="card-title">{{product.productName}}</h5>
                               <p class="card-text"><b>Type: </b>{{product.productTypeName}}</p>
                               <p class="card-text"><b>Size: </b>{{product.productSizeDescription}}</p>
+                              <p class="card-text"><b>Price: </b>  R{{product.price | number:'.1-3'}}</p>
+                              <p class="card-text"><b> Quantity in Stock: </b>  {{product.productQuantity}}</p>
+
                               <a href="#" class="btn btn-primary" (click)="addToCart(product)" data-bs-toggle="modal" data-bs-target="#additionConfirmation">Add To Cart</a>
                             </div>
                         </div>
