--- a/src/app/order-sub-system/shopping-cart/shopping-cart/shopping-cart.component.html
+++ b/src/app/order-sub-system/shopping-cart/shopping-cart/shopping-cart.component.html
@@ -11,7 +11,7 @@
             
             <div class="card">
                 <div class="card-body">
-                  <div class="row">
+                  <div class="row" *ngIf="productCount>0">
                       <div class="col-lg-3 col-md-3 col-sm-3 mt-5" *ngFor="let product of productData">
                         <div class="card" >
                             <img [src]="product.product.productImage" class="card-img-top" alt="...">
@@ -20,17 +20,25 @@
                                 <h5 class="card-title">{{product.product.productName}}</h5>
                                 <p class="card-text"><b>Type: </b>{{product.product.productTypeName}}</p>
                                 <p class="card-text"><b>Size: </b>{{product.product.productSizeDescription}}</p>
+                                <p class="card-text"><b>Price: </b> R{{product.product.price | number:'.1-3'}}</p>
+                                <p class="card-text"><b>Quantity in Stock: </b>{{product.product.productQuantity}}</p>
+                                <p class="card-text"><b>Ordered Quantity: </b>{{product.quantity}}</p>
                                 <a href="#" class="btn btn-primary" (click)="removeFromCart(product.product)" data-bs-toggle="modal" data-bs-target="#removeConfirmation">Remove from Cart</a>
                             </div>
                           </div>
                       </div>
                   </div>
                 </div>
+                <div *ngIf="!(productCount>0)">
+                    <h3>Cart is Empty</h3>
+                </div>
               </div>
-              <div class="row mt-5">
+              <div class="row mt-5" >
                 <div class="col-12">
                   <button class="btn btn-primary mr-2" style="float: right;" type="button" [routerLink]="'/client/checkout'" *ngIf="productCount>0">Proceed</button>
-                  <button class="btn btn-primary mr-2" style="float: right;" type="button" (click)="clearCart()">Clear Cart</button>
+                  <button class="btn btn-primary mr-2" style="float: right;" type="button" (click)="clearCart()" *ngIf="productCount>0">Clear Cart</button>
+                  <button class="btn btn-primary mr-2" style="float: right;" type="button" [routerLink]="'/client/product/list'">Back</button>
+
                 </div>
               </div>
           
